--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@unocss/transformer-directives": "^0.36.0",
     "@unocss/transformer-variant-group": "^0.36.0",
     "@vicons/fluent": "^0.12.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
     "lodash.clonedeep": "^4.5.0",
     "mitt": "^3.0.0",
     "naive-ui": "^2.29.0",
