--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@tauri-apps/cli": "^1.0.0-rc.13",
     "@types/lodash.clonedeep": "^4.5.7",
+    "@unocss/core": "^0.37.1",
+    "@unocss/extractor-pug": "^0.37.1",
     "@vitejs/plugin-vue": "^2.3.3",
+    "pug": "^3.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vue-tsc": "^0.34.7"
