--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pug": "^3.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vite-plugin-html": "^3.2.0",
     "vue-tsc": "^0.34.7"
   }
 }
