--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@unocss/reset": "^0.36.0",
     "@unocss/transformer-directives": "^0.36.0",
     "@unocss/transformer-variant-group": "^0.36.0",
+    "@vicons/fa": "^0.12.0",
     "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "lodash.clonedeep": "^4.5.0",
@@ -35,6 +36,7 @@
     "pug": "^3.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vite-plugin-html": "^3.2.0",
     "vue-tsc": "^0.34.7"
   }
 }
