--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wsl2tools",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -30,10 +30,10 @@
     "@intlify/vite-plugin-vue-i18n": "^3.4.0",
     "@tauri-apps/cli": "^1.0.0-rc.13",
     "@types/lodash.clonedeep": "^4.5.7",
+    "@unocss/cli": "^0.37.4",
     "@unocss/core": "^0.37.1",
-    "@unocss/extractor-pug": "^0.37.1",
+    "@unocss/vite": "^0.37.4",
     "@vitejs/plugin-vue": "^2.3.3",
-    "pug": "^3.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vite-plugin-html": "^3.2.0",
