--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,9 @@ tauri-build = { version = "1.0.0-rc.12", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-rc.14", features = ["api-all"] }
+tauri = { version = "1.0.0-rc.14", features = ["api-all", "system-tray"] }
+thiserror = "1.0.31"
+log = "0.4.17"
 
 [features]
 # by default Tauri runs in production mode
